/*
 * $Id: ChangeLog,v 1.96 2002/03/08 23:22:32 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-03-09 11:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbpcode.h
  * source/compiler/genc.c
  * source/compiler/harbour.c
  * source/compiler/hbfix.c
  * source/compiler/hbpcode.c
  * source/vm/hvm.c
    + Added support for new PCODE HB_P_LINEOFFSET.

  /* xHarbour executable (using line numbers) are now significantly smaller and faster. */

2002-03-08 15:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/garbage.c
    + Added reycling logic for HB_ITEMs and HB_BASEARRAYs.

  * source/vm/fm.c
    + Added Counters logic for Allocations, ReAllocations and Freed.
    * Revised hb_xexit() //info display and added the statistics of the new counters.

2002-03-07 19:52 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
  * source/vm/garbage.c
    * Few GC improvements.

  * source/vm/hvm.c
    * Added 1 comment line.

  * tests/pp_harb.ch
    * Protected OLE related methods with #ifdef WIN

2002-03-07 14:09 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * bin/bld.bat
    + Added ole32 and oleaut32 libraries to the MSVC line.
    + Added /FORCE:MULTIPLE to the link options of MSVC to allow for duplicate symbols.

  * source/vm/arrays.c
    - Commented out HB_IS_MEMVAR logic from hb_arrayReleaseGarbage()

  * tests/pp.prg
    ! Minor fix in PP_PreProTExt()
    * Few refniments in display of errors.
  * tests/pp_harb.ch
    + Added self contained OLE Client based on Jose Gimenez's excelent work.

  /* Now scripts have full access for COM Servers. */

2002-03-05 22:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/fastitem.c
    + Added type casts required by MSVC.

2002-03-05 22:18 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbextern.ch
  * source/common/hbstr.c